--- a/q5.md
+++ b/q5.md
@@ -13,4 +13,23 @@
 
 # 解题思路
 
+动态规划，用递归
+
+由于长串符合的前提是短串符合，结合递归的特异性，可以假设长串是符合的，再去求证短串是否符合。
+
+三种情况
+- 判断长串[i:j]是否符合，递归求解短串[i+1:j-1]
+- 如果不符合，递归求解[i+1:j]和[i:j-1]
+
+边界
+- i<=j
+
+记录结果
+全局变量
+初次是s[0],l=1
+
+当求出一个符合结果的解时，判断j-i+1>l,
+如果大于，取新值
+
+
 
