--- a/q5.md
+++ b/q5.md
@@ -18,8 +18,8 @@
 由于长串符合的前提是短串符合，结合递归的特异性，可以假设长串是符合的，再去求证短串是否符合。
 
 三种情况
-- 判断长串[i:j]是否符合，递归求解短串[i+1:j-1]
-- 如果不符合，递归求解[i+1:j]和[i:j-1]
+1 判断长串[i:j]是否符合，递归求解短串[i+1:j-1]
+2 递归求解[i+1:j]和[i:j-1]，和[i:j]的比较长度
 
 边界
 - i<=j
