--- a/q5.md
+++ b/q5.md
@@ -32,4 +32,44 @@
 如果大于，取新值
 
 
+# 中心扩展
 
+i从0开始，一圈一圈扩展，如果下表超界，跳出
+判断偶数情况，下标超界，跳出
+
+理想状态，i=len/2时，串最大。
+如果sl==len-|l/2-i|时,sl最大，跳出
+- 边界
+
+5/2=2
+6/2=3，6/2-1=2
+
+比如abcba
+a
+ab
+b
+abc
+bc
+c
+bcb
+abcba
+cb
+
+abccba
+a
+ab
+b
+abc
+bc
+c
+bcc
+cc
+bccb
+abccba
+c
+ccb
+cb
+ccba
+b
+cba
+ba
