--- a/q5.md
+++ b/q5.md
@@ -39,6 +39,15 @@ i从0开始，一圈一圈扩展，如果下表超界，跳出
 
 理想状态，i=len/2时，串最大。
 如果sl==len-|l/2-i|时,sl最大，跳出
+
+奇数
+如果i-j==0或者i+j==len-1
+
+偶数
+如果i-j==0或者i+j+1==len-1
+
+跳出大循环
+
 - 边界
 
 5/2=2
