--- a/q5.md
+++ b/q5.md
@@ -37,6 +37,48 @@
 i从0开始，一圈一圈扩展，如果下表超界，跳出
 判断偶数情况，下标超界，跳出
 
+中心值
+奇数，ia=len/2
+偶数 ia=len/2-1
+
+一圈圈扩大，当抵达理想最大值时，跳出循环
+1. 单值扩大
+2. 双值扩大
+
+理想最大值
+abccba
+
+c的理想最大值是0,5
+
+i j i-j i+j
+2 1 1 3 
+2 2 0 4 
+
+i-j==0 i+j==len-1
+
+3 1 2 4
+3 2 1 5
+
+1 1 0 2
+
+4 1 3 5
+
+5
+
+i j i-j i+j+1
+2 1 1 4
+2 2 0 5
+
+3 1 2 5
+
+12 1 0 3
+
+42
+
+i-j==0 i+j+1==len-1
+
+所以应该在双值扩大后再跳出
+
 理想状态，i=len/2时，串最大。
 如果sl==len-|l/2-i|时,sl最大，跳出
 
@@ -82,3 +124,30 @@ ccba
 b
 cba
 ba
+
+abbbc
+
+b
+bbb
+abbbc
+
+bb
+bbbc
+
+b
+abb
+
+bb
+abbb
+
+b
+bbc
+
+bc
+
+a
+
+ab
+
+c
+
