--- a/q6.md
+++ b/q6.md
@@ -25,3 +25,106 @@ L     D     R
 E   O E   I I
 E C   I H   N
 T     S     G
+
+# 解题
+
+l = 10
+n = 3
+a = 2
+b = 4
+c = 3
+
+10 / 4 = 2
+10 % 4 = 2
+2 - 3 = -1
+在长行中
+
+2 * 2 + 1 = 5
+总共5行
+
+arr[5][3]
+
+0 1 2 3 4 5 6 7 8 9
+3
+0 4 8
+1 3 5 7 9
+2 6
+
+0 1 2 3 4 5 6 7 8 9 10 11 12 13 15 16
+4
+0 6 12
+1 5 7 11 13
+2 4 8 10 14 16
+3 9 15
+
+5
+5 g = 2*5-2 = 8
+0 0+2*5-2 0+2*(2*5-2)
+0 8 16
+1 1+g 1+g*2 1+g*3
+ 1+6  1+6+g
+1  9  17
+ 7  15
+2  10  18
+ 6  14
+3  11  19
+ 5  13
+4  12  20
+
+总结
+n=6
+g = 2*6-2 = 10
+
+0 0+g 0+g*2
+0 10 20
+
+1  1+g  1+g*2  a1=(n-1-1)*2=8
+ 1+a1  1+a1+g
+1  11  21
+ 9  19
+
+2  2+g  2+g*2 a2=(n-2-1)*2=6
+ 2+a2  2+a2+g
+2  12  22
+ 8  18
+
+3  3+g  3+g*2 a3 = 4
+ 3+a3 3+a3+g
+3  13  23
+ 7  17
+
+4  4+g  4+g*2  a4 = 2
+ 4+a4  4+a4+g
+4  14  24
+ 6  16
+
+5 5+g 5+g*2
+5 15 25
+
+for i=0 i小于n
+if(i%n==0||(i+1)%n==0)
+g=2*n-2
+while j=0
+push(i+g*j)
+if(i+g*j>=l) break;
+
+else 
+a = (n-i-1)*2
+while j=0 
+
+if(i+g*j >= l) break;
+push(i+g*j)
+if(i+g*j+a >= l) break;
+push(i+g*j+a)
+
+行循环
+
+
+
+
+
+
+
+
+
+
