--- a/q9.md
+++ b/q9.md
@@ -26,3 +26,18 @@
 
 负数必定不是
 0结尾必定不是
+
+颠倒整数，比如12321，颠倒过来12321，是符合的
+但是完全颠倒过于费事，可以只颠倒一半
+
+边界
+当获取的颠倒整数大于等于原数时，说明已经到半。比如12321，原origin 12，颠倒new是123.
+
+如果是偶数对称，处理比较简单，只要两者origin=new就可以了
+
+如果是奇数对称，除以10 就可以。
+
+也就是这样
+return origin==new||origin==new/10
+
+
