--- a/q968.md
+++ b/q968.md
@@ -50,6 +50,9 @@ left==1&&right==1 return 0
 left==0||right==0 return 2
 left+right>=3 return 1
 
-为保证叶子节点是0，让叶子dfs(left)时返回1.确保left==1&&right==1时 返回0
+为保证叶子节点是0，让叶子dfs(left)时返回1,确保left==1&&right==1时 返回0
+
+
+## 官方解法
 
 
