--- a/q968.md
+++ b/q968.md
@@ -55,4 +55,14 @@ left+right>=3 return 1
 
 ## 官方解法
 
+状态 a：root 必须放置摄像头的情况下，覆盖整棵树需要的摄像头数目。
+状态 b：覆盖整棵树需要的摄像头数目，无论 root 是否放置摄像头。
+状态 c：覆盖两棵子树需要的摄像头数目，无论节点 root 本身是否被监控到。
+
+a = lc + rc + 1;
+b = min(a, min(la+rb, lb+ra))
+c = min(a, min(lb+rb))
+
+
+
 
