--- a/md/q6.md
+++ b/md/q6.md
@@ -26,6 +26,18 @@ E   O E   I I
 E C   I H   N
 T     S     G
 
+# 用例
+"LEETCODEISHIRING"
+1
+"LEETCODEISHIRING"
+2
+"LEETCODEISHIRING"
+3
+"LEETCODEISHIRING"
+4
+"LEETCODEISHIRING"
+5
+
 # 解题
 
 l = 10
