--- a/md/q8.md
+++ b/md/q8.md
@@ -44,6 +44,14 @@
 解释: 数字 "-91283472332" 超过 32 位有符号整数范围。 
      因此返回 INT_MIN (−231) 。
 
+# 用例
+"42"
+"   -42"
+"4193 with words"
+"words and 987"
+"-91283472332"
+"  +84562134  "
+
 
 # 解题
 
