--- a/md/q10.md
+++ b/md/q10.md
@@ -49,6 +49,19 @@ s = "mississippi"
 p = "mis*is*p*."
 输出: false
 
+
+# 用例
+"aa"
+"a"
+"aa"
+"a*"
+"ab"
+".*"
+"aab"
+"c*a*b"
+"mississippi"
+"mis*is*p*."
+
 # 解题
 
 ## 官方题解 动态规划
