--- a/md/q226.md
+++ b/md/q226.md
@@ -23,6 +23,12 @@
 
 谷歌：我们90％的工程师使用您编写的软件(Homebrew)，但是您却无法在面试时在白板上写出翻转二叉树这道题，这太糟糕了。
 
+
+# 用例
+[4,2,7,1,3,6,9]
+[1,null,2,3]
+
+
 # 解题思路
 
 每个问题都可以分解为小问题，小树都反转后，慢慢地大树就全部反转了。
