--- a/md/q538.md
+++ b/md/q538.md
@@ -16,6 +16,12 @@
 
 注意：本题和 1038: https://leetcode-cn.com/problems/binary-search-tree-to-greater-sum-tree/ 相同
 
+
+# 用例
+[4,1,6,0,2,5,7,null,null,null,3,null,null,null,8]
+[10,6,15,2,8,11,18]
+
+
 # 解题
 
 二叉搜索树根据中序遍历左中右可以得到一个升序的有序数组
