--- a/md/q617.md
+++ b/md/q617.md
@@ -21,6 +21,13 @@
 	 5   4   7
 注意: 合并必须从两个树的根节点开始。
 
+# 用例
+```
+[10,6,15,2,8,11,18]
+[2,1,3,null,4,null,7]
+[1,3,5,2]
+[2,1,3,NULL,4,NULL,7]
+```
 
 # 解题
 
