--- a/md/q501.md
+++ b/md/q501.md
@@ -20,6 +20,15 @@
 
 进阶：你可以不使用额外的空间吗？（假设由递归产生的隐式调用栈的开销不被计算在内）
 
+
+# 用例
+```
+[1,0,2,-1,0,2]
+[1,null,2,2]
+[1,2,3]
+[-1,0,0,1,2,2]
+```
+
 # 解题
 
 ## 1 常规解
