--- a/md/q501.md
+++ b/md/q501.md
@@ -25,8 +25,9 @@
 ```
 [1,0,2,-1,0,2]
 [1,null,2,2]
-[1,2,3]
-[-1,0,0,1,2,2]
+[2,1,3,1,1,2,4,0]
+[2,1,3,1,1,2,4,0,null,null,null,2]
+[6,2,8,0,4,7,9,null,null,2,6]
 ```
 
 # 解题
