--- a/md/q10.md
+++ b/md/q10.md
@@ -51,16 +51,25 @@ p = "mis*is*p*."
 
 
 # 用例
+```
 "aa"
 "a"
+
 "aa"
 "a*"
+
 "ab"
 ".*"
+
 "aab"
 "c*a*b"
+
 "mississippi"
 "mis*is*p*."
+
+""
+"a*"
+```
 
 # 解题
 
@@ -92,6 +101,32 @@ a == a，该串符合
 - 如果 flag1==1,并且s[i]!=p[j]，j-1
 - 如果 p[j]=='.'，i-1,j-1
 - 如果 ".*"，j-1
+
+
+f[0][0]是空字符串，不是第一个字符匹配，所以要相应向前移一位
+
+用状态转移方程
+f[i][j] 表示s[i]与p[j]的匹配情况
+
+一般情况
+f[i][j] = f[i-1][j-1], s[i]==p[j]或者p[j]==.
+        = false,else
+
+对于*,p[j]==*
+f[i][j] = f[i-1][j] or f[i][j-2],s[i]==p[j-1],匹配多次
+        = f[i][j-2],s[i]!=p[j-1]匹配0次
+
+## 为什么f[i-1][j] or f[i][j-2]
+
+比较难讲清楚
+
+f[i][j]=f[i-1][j]是显而易见
+
+对于aaa a*
+条件是s[i]==p[j-1]也就是a与a比较，但是状态转移是a*整体
+所以不管匹配不匹配，f[i][j]=f[i][j-2]
+
+
 
 
 
