--- a/md/q235.md
+++ b/md/q235.md
@@ -25,7 +25,28 @@
 p、q 为不同节点且均存在于给定的二叉搜索树中。
 
 # 用例
+```
+[6,2,8,0,4,7,9,null,null,3,5]
+2
+8
 
+[6,2,8,0,4,7,9,null,null,3,5]
+2
+4
+
+[2,null,3]
+3
+2
+
+[2,1]
+2
+1
+```
 
 
 # 解题
+深度优先搜索
+先让p q升序排列
+如果当前节点node比p小，右移
+如果当前节点比q大，左移
+如果当前节点比p大，比q小，为公共祖先
